--- a/Article/Article.less
+++ b/Article/Article.less
@@ -11,24 +11,26 @@
   height: 50px;
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
-
   h2 {
     font-size: 28px;
     padding: 0;
     margin: 15px 0 0;
   }
-
   .date {
     margin: 0;
     font-size: 14px;
   }
-
-  .close {
+  .readButton {
+    display: block;
     position: absolute;
     top: 10px;
     right: 10px;
+    font-size: 12px;
+    color: grey;
+    cursor: pointer;
+    transform: translate(-50%);
+    background-color: white;
   }
-
   .expandButton {
     position: absolute;
     bottom: 0;
@@ -40,11 +42,6 @@
     background-color: white;
   }
 }
-
 .article-open {
   height: 400px;
 }
-
-
-
-
