--- a/Menu/Menu.less
+++ b/Menu/Menu.less
@@ -3,28 +3,53 @@
   left: 20px;
   cursor: pointer;
 }
-
 .menu {
-  display: none;
+  display: block;
   position: fixed;
   top: 75px;
-  left: 0;
+  left: -350px;
   width: 350px;
-  height: 100vh; /* This give the height 100% of the screen or, '100% of View Height' */
+  height: 100vh;
   background-color: #81C784;
   border: 1px solid #004D40;
   border-left: none;
   border-bottom: none;
-  z-index: 2; /* This set the layer level of the element, it has precendence over initial level of 1*/
+  z-index: 1;
 }
-
 .menu ul li{
   list-style-type: none;
   font-size: 32px;
-  padding: 30px 0;
+  padding:  30px;
   text-align: center;
 }
-
-.menu--open {
-  display: block;
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
